# HexSmw

./: .gitignore  CMakeLists.txt  HexWidget.cpp  MainWindow.cpp  MainWindow.h  main.cpp  vcpkg.json
.github/workflows/: buil.yml  build  build.yml  linux.yml  windows.yml
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/Widgets/: AsmEditorWidget.cpp  AsmEditorWidget.h  EditorStackWidget.cpp  EditorStackWidget.h  HexEditorWidget.cpp  HexEditorWidget.h  HexViewWidget.cpp  HexViewWidget.h  HexWidget.h  ToolbarWidget.cpp  ToolbarWidget.h
